@@ -26,11 +26,9 @@ describe "exim delivery agent" do
       to      'marcel@test.lindsaar.net, bob@test.lindsaar.net'
       subject 'invalid RFC2822'
     end
-    
-    Mail::Exim.should_receive(:call).with('/usr/sbin/exim', 
-                                          '-i -t -f "roger@test.lindsaar.net" --', 
-                                          '"marcel@test.lindsaar.net" "bob@test.lindsaar.net"', 
-                                          mail.encoded)
+
+    Mail::Sendmail.should_receive(:call).with('/usr/sbin/exim', '-i -t -f "roger@test.lindsaar.net" --', nil, mail.encoded)
+
     mail.deliver!
   end
 
@@ -50,14 +48,10 @@ describe "exim delivery agent" do
         message_id "<1234@test.lindsaar.net>"
         body "body"
       end
-      
-      Mail::Exim.should_receive(:call).with('/usr/sbin/exim',
-                                                '-i -t -f "return@test.lindsaar.net" --', 
-                                                '"to@test.lindsaar.net"', 
-                                                mail.encoded)
-                                                
-      mail.deliver
 
+      Mail::Sendmail.should_receive(:call).with('/usr/sbin/exim', '-i -t -f "return@test.lindsaar.net" --', nil, mail.encoded)
+
+      mail.deliver
     end
 
     it "should use the sender address is no return path is specified" do
@@ -74,14 +68,9 @@ describe "exim delivery agent" do
         body "body"
       end
 
-      Mail::Exim.should_receive(:call).with('/usr/sbin/exim',
-                                                '-i -t -f "sender@test.lindsaar.net" --', 
-                                                '"to@test.lindsaar.net"', 
-                                                mail.encoded)
-
       mail.deliver
     end
-    
+
     it "should use the from address is no return path or sender are specified" do
       Mail.defaults do
         delivery_method :exim
@@ -95,10 +84,8 @@ describe "exim delivery agent" do
         body "body"
       end
 
-      Mail::Exim.should_receive(:call).with('/usr/sbin/exim',
-                                                '-i -t -f "from@test.lindsaar.net" --', 
-                                                '"to@test.lindsaar.net"', 
-                                                mail.encoded)
+      Mail::Sendmail.should_receive(:call).with('/usr/sbin/exim', '-i -t -f "from@test.lindsaar.net" --', nil, mail.encoded)
+
       mail.deliver
     end
 
@@ -115,10 +102,8 @@ describe "exim delivery agent" do
         body 'body'
       end
 
-      Mail::Exim.should_receive(:call).with('/usr/sbin/exim',
-                                                '-i -t -f "\"from+suffix test\"@test.lindsaar.net" --',
-                                                '"to@test.lindsaar.net"',
-                                                mail.encoded)
+      Mail::Sendmail.should_receive(:call).with('/usr/sbin/exim', '-i -t -f "\"from+suffix test\"@test.lindsaar.net" --', nil, mail.encoded)
+
       mail.deliver
     end
 
@@ -132,10 +117,8 @@ describe "exim delivery agent" do
         from 'from@test.lindsaar.net'
       end
 
-      Mail::Exim.should_receive(:call).with('/usr/sbin/exim',
-                                                '-i -t -f "from@test.lindsaar.net" --',
-                                                '"-hyphen@test.lindsaar.net"',
-                                                mail.encoded)
+      Mail::Sendmail.should_receive(:call).with('/usr/sbin/exim', '-i -t -f "from@test.lindsaar.net" --', nil, mail.encoded)
+
       mail.deliver
     end
   end
@@ -151,10 +134,8 @@ describe "exim delivery agent" do
       subject 'invalid RFC2822'
     end
     
-    Mail::Exim.should_receive(:call).with('/usr/sbin/exim', 
-                                              ' -f "from@test.lindsaar.net" --',
-                                              '"marcel@test.lindsaar.net" "bob@test.lindsaar.net"', 
-                                              mail.encoded)
+    Mail::Sendmail.should_receive(:call).with('/usr/sbin/exim', ' -f "from@test.lindsaar.net" --', nil, mail.encoded)
+
     mail.deliver!
   end
 
@@ -168,11 +149,13 @@ describe "exim delivery agent" do
       to      'marcel@test.lindsaar.net'
       subject 'invalid RFC2822'
     end
-    
-    Mail::Exim.should_receive(:call).with('/usr/sbin/exim', 
-                                              " -f \"\\\"foo\\\\\\\"\\;touch /tmp/PWNED\\;\\\\\\\"\\\"@blah.com\" --",
-                                              '"marcel@test.lindsaar.net"', 
-                                              mail.encoded)
+
+    Mail::Sendmail.should_receive(:call).with(
+      '/usr/sbin/exim',
+      " -f \"\\\"foo\\\\\\\"\\;touch /tmp/PWNED\\;\\\\\\\"\\\"@blah.com\" --",
+      nil,
+      mail.encoded)
+
     mail.deliver!
   end
 
